--- a/github_rensyu/index.html
+++ b/github_rensyu/index.html
@@ -6,6 +6,17 @@
 </head>
 
 <body>
-	<p>タケシ</p>
+	<dl>
+		<dt>名前</dt>
+		<dd></dd>
+		<dt>年齢</dt>
+		<dd></dd>
+		<dt>身長</dt>
+		<dd></dd>
+		<dt>体重</dt>
+		<dd></dd>
+		<dt>バストサイズ</dt>
+		<dd></dd>
+	</dl>
 </body>
 </html>
